# rel-doc

./: .readthedocs.yaml  pyproject.toml  relAI.py
docs/source/: api.rst  conf.py  index.rst  usage.rst
